# mouse-gym

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json
.cursor/rules/: changelog.mdc  python-venv.mdc
.github/workflows/: publish.yml
examples/: 01_random_rollout.ipynb  02_multi_env.ipynb  03_rng_seeding_control.ipynb  04_metrics.ipynb  04_metrics_tracker.ipynb
scripts/: install.sh
src/mouse_gym/: __init__.py  build.py  config.py  format.py  wrappers.py
tests/: test_smoke.py
