[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mouse-gym"
version = "0.1.0"
description = "Meta-Optimization Using Sequential Experiences — reset-free Gymnasium rollouts"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gymnasium>=1.3.0",
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/micahr234/mouse-gym"
Repository = "https://github.com/micahr234/mouse-gym"
Issues = "https://github.com/micahr234/mouse-gym/issues"

[project.optional-dependencies]
examples = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.11.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.3.0",
]
all = [
    "mouse-gym[examples]",
]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "build>=1.5.0",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.package-data]
mouse_gym = ["py.typed"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.setuptools]
packages = [
    "mouse_gym",
]

[tool.setuptools.package-dir]
"" = "src"
